--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,10 @@ package-lock.json
 .env.development.local
 .env.test.local
 .env.production.local
-a.py
+leetcode.py
 A.cpp
+j.json
+format.md
 
 npm-debug.log*
 yarn-debug.log*
