--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "codeprime",
   "version": "0.0.0",
   "private": true,
+  "engines": {"node" : "18.2.0"},
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
